Fixed overflow issue

--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@
     opacity: 0;
     pointer-events: none;
     width: 1px;
+    overflow: hidden;
 }
 
 * { box-sizing: border-box; }
